--- a/hosted/style.css
+++ b/hosted/style.css
@@ -50,7 +50,7 @@ nav:nth-child(1) {
 .domoForm {
     border: 2px solid #338acc;
     height: 35px;
-    width: 700px;
+    width: 800px;
     margin-top:0px;
     padding-top:10px;
     background-color: #55acee;
@@ -59,17 +59,13 @@ nav:nth-child(1) {
 }
 
 .domoForm label {
-    display: inline-block;
     width: 75px;
     margin-left: 10px;
     font-size: 1.2em;
-    float: left;
     color: white;
 }
 
-.domoForm input[type=text] {
-    float:left;
-}
+
 
 .makeDomoSubmit {
     transition: background-color 0.4s ease;
@@ -254,6 +250,9 @@ h3.domoAge {
     font-weight: bold;
     padding-right: 40px;
     font-size: 1.5em;
+}
+h3.domoPubPriv {
+    float: left;
 }
 
 .domo:first-child {
